# red-image

./: .clang_complete  CMakeLists.txt  README.md
gifdec/: gifdec.c
gifenc/: gifenc.c
include/: cli.h  image.h  version.h  version.h.in
src/: cli.c  image.c
